--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
-h1 {
-  font-family: Arial, Helvetica, sans-serif;
-}
-p {
+p,h1,a {
   font-family: Helvetica, Arial, sans-serif;
+}
+body {
+  background-color: green
 }
