--- a/index.css
+++ b/index.css
@@ -1,7 +1,10 @@
 @charset "UTF-8";
-p,h1,a {
+h1 {
+  font-family: Times, Serif, Verdana;
+}
+p {
   font-family: Helvetica, Arial, sans-serif;
 }
 body {
-  background-color: green
+  background-color: green;
 }
